--- a/Calculatrice/CalcAccueil.html
+++ b/Calculatrice/CalcAccueil.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="CalcStyle.css">
-    <script src="CalcScript.js" defer></script>
+    <script disabled src="CalcScript.js" defer></script>
     <title>Calculatrice Graphique</title>
 </head>
 
@@ -14,7 +14,6 @@
     <nav>
         <div class="onglets">
             <a href="CalcAccueil.html">Calculatrice</a>
-            <a href="#">Jeux Motus</a>
             <a href="#">Distance Inter-Ville</a>
             <a href="#">Créateur du projet</a>
         </div>
@@ -38,7 +37,7 @@
                 </div>
 
                 <div class="ligne-2">
-                    <button id="l2-1.prop(disabled, false)" value="7" Onclick="fordisplay('7')" >7</button>
+                    <button id="l2-1" value="7" Onclick="fordisplay('7')" >7</button>
                     <button id="l2-2" value="8" Onclick="fordisplay('8')" >8</button>
                     <button id="l2-3" value="9" Onclick="fordisplay('9')" >9</button>
                     <button id="l2-4" value="*" Onclick="fordisplay('*')" >*</button>
