--- a/Calculatrice/Calculatrice/Projet.html
+++ b/Calculatrice/Calculatrice/Projet.html
@@ -11,6 +11,7 @@
     <nav>
         <div class="onglets">
             <a href="CalcAccueil.html">Calculatrice</a>
+            <a href="#">Motus</a>
             <a href="#">Distance Inter-Ville</a>
             <a href="Projet.html">Créateur du projet</a>
         </div>
