--- a/Calculatrice/Calculatrice/Projet.html
+++ b/Calculatrice/Calculatrice/Projet.html
@@ -37,7 +37,7 @@
               <h2>02</h2>
               <h3>HARMAFI Marwan</h3>
               <p>J'ai effectué le code en Java du <u><b>MOTUS</b></u>, voici le code source ci-dessous</p>
-              <a href="#">Code Source</a>
+              <a href="https://github.com/Maous-B/Projet-Java-Roubeau-2">Code Source</a>
             </div>
           </div>
         </div>
