--- a/Calculatrice/Calculatrice/CalcAccueil.html
+++ b/Calculatrice/Calculatrice/CalcAccueil.html
@@ -14,8 +14,8 @@
     <nav>
         <div class="onglets">
             <a href="CalcAccueil.html">Calculatrice</a>
-            <a href="#">Motus</a>
-            <a href="#">Distance Inter-Ville</a>
+            <a href="Autre.html">Motus</a>
+            <a href="Autre.html">Distance Inter-Ville</a>
             <a href="Projet.html">Créateur du projet</a>
         </div>
     </nav>
