--- a/Calculatrice/CalcAccueil.html
+++ b/Calculatrice/CalcAccueil.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="CalcStyle.css">
     <script disabled src="CalcScript.js" defer></script>
-    <title>Calculatrice Graphique</title>
+    <title>Calculatrice</title>
 </head>
 
 <body>
