--- a/Calculatrice/Projet.html
+++ b/Calculatrice/Projet.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="ProjetStyle.css">
-    <title>Document</title>
+    <title>Créateur du projet</title>
 </head>
 <body>
     <nav>
@@ -25,7 +25,7 @@
             <div class="content">
               <h2>01</h2>
               <h3>BOUANANE Fethi</h3>
-              <p>J'ai effectué le code en JavaScript de la <u><b>CALCULATRICE</b></u> et ainsi que le site en <u><b>HTML | CSS</b></u>, voici le code source ci-dessous</p>
+              <p>J'ai effectué le code en JavaScript de la <u><b>CALCULATRICE</b></u> et ainsi que le site en <u><b>HTML/CSS</b></u>, voici le code source ci-dessous</p>
               <a href="https://github.com/Whavi/Calculatrice" target="_blank">Code Source</a>
             </div>
           </div>
@@ -35,7 +35,7 @@
           <div class="box">
             <div class="content">
               <h2>02</h2>
-              <h3>HARMAFI Marwan</h3>
+              <h3>HARNAFI Marwan</h3>
               <p>J'ai effectué le code en Java du <u><b>MOTUS</b></u>, voici le code source ci-dessous</p>
               <a href="https://github.com/Maous-B/Projet-Java-Roubeau-2">Code Source</a>
             </div>
@@ -46,7 +46,7 @@
           <div class="box">
             <div class="content">
               <h2>03</h2>
-              <h3>DECAILLON Kilian</h3>
+              <h3>DECAILLON Killian</h3>
               <p>J'ai effectué le code en Java de la distance <u><b>INTER-VILLE</b></u>, voici le code source ci-dessous</p>
               <a href="#">Code Source</a>
             </div>
@@ -54,3 +54,7 @@
         </div>
       </div>
     </div>
+    <footer>
+
+    </footer>
+    </body>
