--- a/Calculatrice/Projet.html
+++ b/Calculatrice/Projet.html
@@ -37,7 +37,7 @@
               <h2>02</h2>
               <h3>HARNAFI Marwan</h3>
               <p>J'ai effectué le code en Java du <u><b>MOTUS</b></u>, voici le code source ci-dessous</p>
-              <a href="https://github.com/Maous-B/Projet-Java-Roubeau-2">Code Source</a>
+              <a href="https://github.com/Maous-B/Projet-Java-Roubeau-2" target="_blank">Code Source</a>
             </div>
           </div>
         </div>
@@ -48,7 +48,7 @@
               <h2>03</h2>
               <h3>DECAILLON Killian</h3>
               <p>J'ai effectué le code en Java de la distance <u><b>INTER-VILLE</b></u>, voici le code source ci-dessous</p>
-              <a href="#">Code Source</a>
+              <a href="#" target="_blank">Code Source</a>
             </div>
           </div>
         </div>
