--- a/Calculatrice/Projet.html
+++ b/Calculatrice/Projet.html
@@ -10,10 +10,10 @@
 <body>
     <nav>
         <div class="onglets">
-            <a href="CalcAccueil.html">Calculatrice</a>
-            <a href="#">Motus</a>
-            <a href="#">Distance Inter-Ville</a>
-            <a href="Projet.html">Créateur du projet</a>
+          <a href="CalcAccueil.html">Calculatrice</a>
+          <a href="Autre.html">Motus</a>
+          <a href="Autre.html">Distance Inter-Ville</a>
+          <a href="Projet.html">Créateur du projet</a>
         </div>
     </nav>
 
